@@ -1,3 +1,8 @@
+TAG: qcreports_db-6-0-17-23
+DATE: 12/20/2021
+STAFF: lec
+wts2-752/add all root section to GO Stats report/GO_stats.py
+
 TAG: qcreports_db-6-0-17-22
 DATE: 12/09/2021
 STAFF: lec
